# REA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: b2_user_settings.h
include/REA/: Assets.hpp  BitSet.hpp  Color.hpp  Constants.hpp  ImGuiHelper.hpp  MarchingSquareMesherUtils.hpp  Math.hpp  MemoryHeap.cpp  MemoryHeap.hpp  PhysicsMaterial.hpp  Pixel.hpp  PixelGridBuilder.hpp  PixelType.hpp  Sprite.hpp  SpriteTexture.hpp  Stage.hpp  WorldGenerator.hpp
include/REA/Component/: AudioSource.hpp  Camera.hpp  Collider.hpp  Physics.hpp  PixelGrid.hpp  PixelGridRenderer.hpp  PixelGridRigidBody.hpp  Player.hpp  SandboxController.hpp  SpriteRenderer.hpp  Transform.hpp
include/REA/Context/: Global.hpp  ImGui.hpp
include/REA/System/: AudioSourcePlayer.hpp  Camera.hpp  Debug.hpp  GameOfLifeSimulation.hpp  ImGuiManager.hpp  MainMenu.hpp  PauseMenu.hpp  Physics.hpp  PhysicsDebugRenderer.hpp  PixelGridDrawing.hpp  PixelGridRenderer.hpp  PixelGridSimulation.hpp  PlayerAnimation.hpp  PlayerController.hpp  ReaSystem.hpp  RenderingPreparation.hpp  SandboxController.hpp  SpriteRenderer.hpp
res/shaders/: CCLShared.glsl  PixelGridComputeGlobals.glsl  PixelGridGlobals.glsl  PixelGridMorgulusStarter.glsl  SharedBuffers.glsl  globals.glsl
res/shaders/CCLColumn/: CCLColumn.comp
res/shaders/CCLExtract/: CCLExtract.comp
res/shaders/CCLInitialize/: CCLInitialize.comp
res/shaders/CCLMerge/: CCLMerge.comp
res/shaders/CCLRelabel/: CCLRelabel.comp
res/shaders/MarchingSquare/: MarchingSquare.comp
res/shaders/PhysicsDebug/: PhysicsDebug.frag  PhysicsDebug.vert
res/shaders/PixelGrid/: PixelGrid.frag  PixelGrid.vert
res/shaders/PixelGridCompute/: PixelGridCompute.comp
res/shaders/PixelGridComputeAccumulate/: PixelGridComputeAccumulate.comp
res/shaders/PixelGridComputeFalling/: PixelGridComputeFalling.comp
res/shaders/PixelGridComputeFlow/: PixelGridComputeFlow.comp
res/shaders/PixelGridComputeIdle/: PixelGridComputeIdle.comp
res/shaders/PixelGridComputeParticle/: PixelGridComputeParticle.comp
res/shaders/PixelGridRigidBody/: PixelGridRigidBody.comp
res/shaders/PixelGridRigidBodyRemove/: PixelGridRigidBodyRemove.comp
res/shaders/Sprite/: Sprite.frag  Sprite.vert
res/textures/: walk.aseprite  walk2.aseprite
src/: Color.cpp  ImGuiHelper.cpp  MarchingSquareMesherUtils.cpp  Math.cpp  MemoryHeap.cpp  PhysicsMaterial.cpp  PixelGridBuilder.cpp  Sprite.cpp  SpriteTexture.cpp  WorldGenerator.cpp
src/System/: AudioSourcePlayer.cpp  Camera.cpp  Debug.cpp  GameOfLifeSimulation.cpp  ImGuiManager.cpp  MainMenu.cpp  PauseMenu.cpp  Physics.cpp  PhysicsDebugRenderer.cpp  PixelGridDrawing.cpp  PixelGridRenderer.cpp  PixelGridSimulation.cpp  PlayerAnimation.cpp  PlayerController.cpp  ReaSystem.cpp  RenderingPreparation.cpp  SandboxController.cpp  SpriteRenderer.cpp
